// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change address 1`] = `
<Form
  as="form"
  onSubmit={[Function]}
>
  <Input
    autoFocus={true}
    fluid={true}
    onChange={[Function]}
    placeholder="Find Subscription"
    size="big"
    type="text"
    value="foo"
  />
</Form>
`;

exports[`it renders 1`] = `
<Form
  as="form"
  onSubmit={[Function]}
>
  <Input
    autoFocus={true}
    fluid={true}
    onChange={[Function]}
    placeholder="Find Subscription"
    size="big"
    type="text"
    value=""
  />
</Form>
`;
